--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
     <body>
        
       <div id= game>
+       <h4>Player: <%=player.username%> score: <%=player.score%></h4>
           <div id=msg_board>
             <h3 id=win_msg>SOLVED!</h3>
           </div>
