--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -10,9 +10,9 @@
             
             <form method="POST" action="/">
                 <label>Username</label>
-                <input type="text" name="username">
+                <input type="text" name="username"required>
                 <label>Password</label>
-                <input type="text" name="password">
+                <input type="password" name="password" required>
                 <input type="submit" value="Submit">
             </form>  
         </div>   
