push game score to db(solved value in front-end*) -> design abjustments

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,15 +26,21 @@
     
     </header>
     <body>
-       
+      <form action="/refresh" method="POST"  onsubmit= "return submitResults();">
+        <br>
+        <input type="submit" value="check results">
+      </form>
+
       <div id= game>
        <h4>Player: <%=player.username%> score: <%=player.score%></h4>
           <div id=msg_board>
             <h3 id=win_msg>SOLVED!</h3>
+            
           </div>
-       
+          
         <div id="board"></div>
     </div>
+ 
     </body>
     <footer>
 
