--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -5,9 +5,9 @@
 </head>
 <body>
     
-    <h1>Enter name to play</h1>
+    <h1>Insert your credentials to play</h1>
         <div class="player_container">
-            
+            <p class = "warning_msg"><%=message%></p>
             <form method="POST" action="/">
                 <label>Username</label>
                 <input type="text" name="username"required>
