--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
         <h1>Sudoku</h1>
         <div id="setup-game">
         <div id="difficulty">
+          
         <h3>Choose difficulty</h3>
         <input id="d1" type="radio" name="difficulty" value="easy" checked="easy">
         <label>Easy</label>
@@ -18,31 +19,29 @@
         <input id="d3" type="radio" name="difficulty" value="hard">
         <label>Hard</label>
         </div>
-        <button id="start-button" onclick="startGame()">Create new Game</button>
-        <button id="check-button" onclick="checkResults()">Check results</button>
-        <button id="reset-button" onclick="resetBoard()">Reset</button>
+        <button id="start-button" class="header_btn" onclick="startGame()">Create new Game</button>
+        <button id="check-button" class="header_btn" onclick="checkResults()">Verify results</button>
+        <button id="reset-button" class="header_btn" onclick="resetBoard()">Reset</button>
+        
        
     </div>
     
     </header>
-    <body>
-      <form action="/refresh" method="POST"  onsubmit= "return submitResults();">
-        <br>
-        <input type="submit" value="check results">
-      </form>
-
+    
       <div id= game>
-       <h4>Player: <%=player.username%> score: <%=player.score%></h4>
-          <div id=msg_board>
-            <h3 id=win_msg>SOLVED!</h3>
-            
-          </div>
+        <body>   
+          <form action="/refresh" method="POST" class="submit_score" onsubmit= "return submitResults();">
+            <input type="submit" id="submit_btn" value="SUBMIT">
+           
+          </form>
+       <h4>Player: <%=player.username%> | Score: <%=player.score%></h4>         
+            <h3 id=win_msg>SOLVED!</h3>          
           
         <div id="board"></div>
-    </div>
+    
  
     </body>
     <footer>
-
+      
     </footer>
 </html>
